[gd_scene load_steps=6 format=3 uid="uid://c5srvqbgbew67"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_yqm5l"]
[ext_resource type="Texture2D" uid="uid://lddbpkmtw4bw" path="res://art/1 Heart.png" id="2_3bnyy"]
[ext_resource type="Texture2D" uid="uid://cfujfv7hcxpi4" path="res://art/0 Hearts.png" id="2_7futb"]
[ext_resource type="Texture2D" uid="uid://biu1mvh440n7h" path="res://art/2 Hearts.png" id="3_s1khe"]
[ext_resource type="Texture2D" uid="uid://ci57ofgoh68e6" path="res://art/3 Hearts.png" id="4_dffm7"]

[node name="HUD" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1282.0
offset_bottom = 722.0
script = ExtResource("1_yqm5l")

[node name="LifeEmpty" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Life0" type="TextureRect" parent="Control/LifeEmpty"]
layout_mode = 1
offset_left = 24.0
offset_top = 648.0
offset_right = 152.0
offset_bottom = 712.0
texture = ExtResource("2_7futb")
expand_mode = 2

[node name="LifeCounter" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 32.0
offset_top = 624.0
offset_right = 160.0
offset_bottom = 688.0

[node name="Life1" type="TextureRect" parent="Control/LifeCounter"]
layout_mode = 1
offset_left = -8.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 88.0
texture = ExtResource("2_3bnyy")
expand_mode = 2

[node name="Life2" type="TextureRect" parent="Control/LifeCounter"]
layout_mode = 1
offset_left = -8.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 88.0
texture = ExtResource("3_s1khe")
expand_mode = 2

[node name="Life3" type="TextureRect" parent="Control/LifeCounter"]
layout_mode = 1
offset_left = -8.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 88.0
texture = ExtResource("4_dffm7")
expand_mode = 2

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 30.0
offset_top = 22.0
offset_right = 627.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="WaveTopRightLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1104.0
offset_top = 22.0
offset_right = 1257.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 30
text = "Wave: 0"

[node name="WaveLabel" type="Label" parent="Control"]
process_mode = 3
layout_mode = 0
offset_left = 576.0
offset_top = 288.0
offset_right = 776.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 30
vertical_alignment = 1
